# Basket

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
backend/: .env  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 6b503e01b485_initial_schema.py  9d39ba6afb52_add_pending_owner_role.py
backend/app/: config.py  database.py  main.py  rate_limit.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  place.py  reservation.py  review.py  schedule.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  gyms.py  outdoors.py  owner.py  places.py  reservations.py
backend/app/schemas/: auth.py  common.py
backend/app/services/: slot_engine.py
backend/app/utils/: price.py  security.py
backend/basket_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed.py
docs/: BACKEND_DATA_IA.md  BACKEND_PLAN.md.resolved  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  ERD.md  FRONT_PROMPT.md  FRONT_PROMPT_V2.md  FRONT_PROMPT_V3.md  NEXT_STEPS_GUIDE.md  PRD.md  PRD_V2.md  PROGRESS_HANDOVER.md  README.md  REMAINING_TASKS.md  SECURITY_TODO.md
src/: App.tsx  index.css
src/components/: AppLayout.tsx  BottomNav.tsx  Header.tsx  RequireAuth.tsx
src/context/: AuthContext.tsx  ToastContext.tsx
src/hooks/: useMockPageLoad.ts  usePlaces.ts
src/lib/: api.ts
src/pages/: AccessDenied.tsx  Busan.tsx  CardPayment.tsx  Checkout.tsx  (+23 more)
(+22 files in other folders)
